--- a/bytecode/Cargo.toml
+++ b/bytecode/Cargo.toml
@@ -1,16 +1,8 @@
 [package]
-name = "cute"
+name = "bytecode"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "bytecode",
-    "compiler",
-    "vm"
-]
-
 [dependencies]
-compiler = { path = "compiler" }
