--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 gc = { version = "0.5.0", features = ["derive"] }
 bytecode = { path = "../bytecode" }
+compiler = { path = "../compiler" }
